create workable cmakelsit.txt for compile shared labrary

--- a/proj/cmake/CMakeLists.txt
+++ b/proj/cmake/CMakeLists.txt
@@ -1,17 +1,14 @@
 cmake_minimum_required( VERSION 2.8 FATAL_ERROR )
 set( CMAKE_VERBOSE_MAKEFILE ON )
-
-get_filename_component( CINDER_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../../../" ABSOLUTE )
-
-project(core)	
+get_filename_component( MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../../" ABSOLUTE )
+get_filename_component( CINDER_PATH "${MODULE_PATH}/../../../" ABSOLUTE)
+set( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../../" )
+project(CoreModules)	
 
 set(SOURCE_LIB ../../src/video.cpp)	
-include_directories(../../../../../include)	
+include_directories(${MODULE_PATH}/include)	
 
-
-set ( CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON )
-add_library(core SHARED ${SOURCE_LIB})
-
+add_library(CoreModules SHARED ${SOURCE_LIB})
 
 if( NOT TARGET cinder )
     include( "${CINDER_PATH}/proj/cmake/configure.cmake" )
@@ -20,4 +17,10 @@ if( NOT TARGET cinder )
         "$ENV{CINDER_PATH}/${CINDER_LIB_DIRECTORY}" )
 endif()
 
-target_link_libraries( core PRIVATE cinder )
+if( NOT TARGET NanoVG )
+    get_filename_component( nanoVgComp "${CINDER_PATH}/blocks/NanoVG/proj/cmake/" ABSOLUTE )
+    find_package( "NanoVG" PATHS "${nanoVgComp}" NO_DEFAULT_PATH )
+    add_dependencies( CoreModules NanoVG )
+endif()
+
+target_link_libraries( CoreModules PRIVATE cinder PUBLIC NanoVG )
