--- a/proj/cmake/CMakeLists.txt
+++ b/proj/cmake/CMakeLists.txt
@@ -1,15 +1,25 @@
 cmake_minimum_required( VERSION 2.8 FATAL_ERROR )
 set( CMAKE_VERBOSE_MAKEFILE ON )
+get_filename_component( PLUGIN_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../" ABSOLUTE )
 get_filename_component( MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../../" ABSOLUTE )
 get_filename_component( CINDER_PATH "${MODULE_PATH}/../../../" ABSOLUTE)
+
+
 set( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../" )
 
 project(Plugin)	
 
-set(SOURCE_LIB ../../src/video.cpp)	
-include_directories(${MODULE_PATH}/include)	
+list( APPEND SOURCES
+		${PLUGIN_PATH}/src/coreModules.cpp
+		${PLUGIN_PATH}/src/video.cpp
+		${PLUGIN_PATH}/src/template.cpp
+	)
 
-add_library(Plugin SHARED ${SOURCE_LIB})
+include_directories( PUBLIC "${PLUGIN_PATH}/include" )
+include_directories( PUBLIC ${MODULE_PATH}/include )	
+
+
+add_library(Plugin SHARED ${SOURCES})
 
 if( NOT TARGET cinder )
     include( "${CINDER_PATH}/proj/cmake/configure.cmake" )
