--- a/proj/cmake/CMakeLists.txt
+++ b/proj/cmake/CMakeLists.txt
@@ -1,22 +1,17 @@
 cmake_minimum_required( VERSION 2.8 FATAL_ERROR )
 set( CMAKE_VERBOSE_MAKEFILE ON )
-get_filename_component( PLUGIN_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../" ABSOLUTE )
-get_filename_component( MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../../" ABSOLUTE )
-get_filename_component( CINDER_PATH "${MODULE_PATH}/../../../" ABSOLUTE)
-
-
-set( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../" )
+get_filename_component( APP_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../.." ABSOLUTE )
+get_filename_component( MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../.." ABSOLUTE )
+get_filename_component( CINDER_PATH "${MODULE_PATH}/deps/Cinder" ABSOLUTE)
 
 project(Plugin)	
 
-include_directories( PUBLIC "${PLUGIN_PATH}/include" "${MODULE_PATH}/include")
-
+include_directories( PUBLIC "${APP_PATH}/include" )
 list( APPEND SOURCES
-		${PLUGIN_PATH}/src/coreModules.cpp
-		${PLUGIN_PATH}/src/video.cpp
-		${PLUGIN_PATH}/src/template.cpp
+        ${APP_PATH}/src/coreModules.cpp
+        ${APP_PATH}/src/video.cpp
+        ${APP_PATH}/src/template.cpp
 	)
-
 
 add_library(Plugin SHARED ${SOURCES})
 
@@ -27,9 +22,41 @@ if( NOT TARGET cinder )
         "$ENV{CINDER_PATH}/${CINDER_LIB_DIRECTORY}" )
 endif()
 
-if( NOT TARGET NanoVG )
-    get_filename_component( nanoVgComp "${CINDER_PATH}/blocks/NanoVG/proj/cmake/" ABSOLUTE )
-    find_package( "NanoVG" PATHS "${nanoVgComp}" NO_DEFAULT_PATH )
+if( NOT TARGET moduleCore )
+    add_library(moduleCore SHARED IMPORTED)
+    set_target_properties(moduleCore PROPERTIES
+        INTERFACE_COMPILE_DEFINITIONS "FT2_BUILD_LIBRARY;FT_DEBUG_LEVEL_TRACE;_UNIX;_GLFW_X11 -D_GLFW_GLX -D_GLFW_USE_OPENGL"
+        INTERFACE_COMPILE_OPTIONS "-std=c++14"
+        INTERFACE_INCLUDE_DIRECTORIES "${MODULE_PATH}/libs/moduleCore/include"
+        INTERFACE_LINK_LIBRARIES "${MODULE_PATH}/libs/libmoduleCore.so"
+    )
+    set_property(TARGET moduleCore APPEND PROPERTY IMPORTED_CONFIGURATIONS DEBUG)
+    set_target_properties(moduleCore PROPERTIES
+        IMPORTED_LOCATION_DEBUG "${MODULE_PATH}/libs/libmoduleCore.so"
+        IMPORTED_SONAME_DEBUG "libmoduleCore.so"
+    )
 endif()
 
-target_link_libraries( Plugin PRIVATE cinder PUBLIC NanoVG )
+if( NOT TARGET NanoVG )
+    add_library(NanoVG SHARED IMPORTED)
+    set_target_properties(NanoVG PROPERTIES
+        INTERFACE_COMPILE_DEFINITIONS "FT2_BUILD_LIBRARY;FT_DEBUG_LEVEL_TRACE;_UNIX;_GLFW_X11 -D_GLFW_GLX -D_GLFW_USE_OPENGL"
+        INTERFACE_COMPILE_OPTIONS "-std=c++14"
+        INTERFACE_INCLUDE_DIRECTORIES "${MODULE_PATH}/deps/NanoVG/include;${MODULE_PATH}/deps/NanoVG/deps/nanovg/src"
+        INTERFACE_LINK_LIBRARIES "${MODULE_PATH}/deps/libNanoVG.so"
+    )
+    set_property(TARGET NanoVG APPEND PROPERTY IMPORTED_CONFIGURATIONS DEBUG)
+    set_target_properties(NanoVG PROPERTIES
+        IMPORTED_LOCATION_DEBUG "${MODULE_PATH}/deps/libNanoVG.so"
+        IMPORTED_SONAME_DEBUG "libNanoVG.so"
+    )
+endif()
+
+target_link_libraries( Plugin PRIVATE cinder PUBLIC moduleCore NanoVG )
+
+set_target_properties( Plugin
+    PROPERTIES
+    ARCHIVE_OUTPUT_DIRECTORY "${APP_PATH}"
+    LIBRARY_OUTPUT_DIRECTORY "${APP_PATH}"
+    RUNTIME_OUTPUT_DIRECTORY "${APP_PATH}"
+)
